Fix: Add missing background-position to transition states
The background scrolling animations were not working because the
transition state CSS rules were missing `background-position: center`.
The scroll animations (scroll-in-from-right, scroll-out-left, etc.)
need an initial background position to animate from/to.

Added `background-position: center` to all 6 transition state rules:
- shelter-to-park / park-to-shelter
- park-to-camden-town / camden-town-to-park
- camden-town-to-london-city / london-city-to-camden-town

This ensures the dual-layer panoramic scrolling system works properly
during travel between locations.

--- a/css/character.css
+++ b/css/character.css
@@ -142,36 +142,42 @@
     background-image: url('../assets/background/bg-city-park.png');
     background-size: 467px 200px;
     background-repeat: no-repeat;
+    background-position: center;
 }
 
 .character-display[data-location="park-to-shelter"] {
     background-image: url('../assets/background/bg-homeless-shelter.png');
     background-size: 467px 200px;
     background-repeat: no-repeat;
+    background-position: center;
 }
 
 .character-display[data-location="park-to-camden-town"] {
     background-image: url('../assets/background/bg-camden-town.png');
     background-size: 467px 200px;
     background-repeat: no-repeat;
+    background-position: center;
 }
 
 .character-display[data-location="camden-town-to-park"] {
     background-image: url('../assets/background/bg-city-park.png');
     background-size: 467px 200px;
     background-repeat: no-repeat;
+    background-position: center;
 }
 
 .character-display[data-location="camden-town-to-london-city"] {
     background-image: url('../assets/background/bg-london-city.png');
     background-size: 467px 200px;
     background-repeat: no-repeat;
+    background-position: center;
 }
 
 .character-display[data-location="london-city-to-camden-town"] {
     background-image: url('../assets/background/bg-camden-town.png');
     background-size: 467px 200px;
     background-repeat: no-repeat;
+    background-position: center;
 }
 
 /* Origin backgrounds for ::before pseudo-element */
